@@ -3,6 +3,9 @@
             WanT code:  Log of Changes 
 =======================================================
 
+22 Apr 2005      overlap_extract.f90 updated with the use of blas in matrix 
+                 multiplications. 
+
 20 Apr 2005      "Habemus restartem" in disentangle (read/write) and the write procedure
                  is also implemented in wannier. Some cleaning in wannier and some
                  output format changes. Changes also in the input parameters and namelists. 
